# GL-Colour-Grading

./: .gitignore  CMakeLists.txt  README.md  pipeline_design.md
assets/config/: grader.cfg
assets/shaders/: core.vsh  core2.fsh  framebuffer.fsh  framebuffer.vsh  post_proc_kernel.fsh  post_proc_kernel.vsh  triangle.fsh  triangle.vsh
assets/shaders/ffmpeg/: frame.fsh  frame.vsh
src/: main.cpp  testMain.cpp
src/core/: config.cpp  config.hpp  grader.cpp  grader.hpp
src/device/gpu/: bindableResource.hpp  gpu.hpp  workgroup.cpp  workgroup.hpp
src/device/gpu/buffers/: circularMultiFbo.cpp  circularMultiFbo.hpp  ebo.cpp  ebo.hpp  fbo.cpp  fbo.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/device/gpu/shaders/: programType.cpp  programType.hpp  shader.cpp  shader.hpp
src/device/stream/: closable.hpp
src/device/video/context/: ffmpegContext.cpp  ffmpegContext.hpp
src/gpu/: bindableResource.hpp  workgroup.cpp  workgroup.hpp
src/gpu/buffers/: circularMultiFbo.cpp  circularMultiFbo.hpp  ebo.cpp  ebo.hpp  fbo.cpp  fbo.hpp  gpuBuffer.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/gpu/shaders/: programType.cpp  programType.hpp  shader.cpp  shader.hpp
src/gpu/shaders/exception/: openGLFeatureSupportException.hpp
src/io/: reader.hpp
src/logging/: logger.cpp  logger.hpp
src/pipeline/: graph.cpp  graph.hpp  pipeline.cpp  pipeline.hpp  pipelinePass.cpp  pipelinePass.hpp
src/pipeline/core/: graph.cpp  graph.hpp
src/pipeline/graph/: coreGraph.cpp  coreGraph.hpp  graph.cpp  graph.hpp
src/pipeline/pass/: pipelinePass.cpp  pipelinePass.hpp
src/pipeline/rendering/: pipelineRenderer.cpp  pipelineRenderer.hpp
src/resources/: texture.cpp  texture.hpp
src/util/: openglUtils.hpp  stringUtils.hpp
src/util/exception/: openGLFeatureSupportException.hpp
src/video/context/: ffmpegContext.cpp  ffmpegContext.hpp
